@@ -1,2 +1,20 @@
-# theorie-des-langages
+# Project Title 
 Repositorie traitant de la theorie des langages . Plus precisement , ce repositories contient des implementations des algorithmes cle de la theorie des langages tel que la determisation, thomsom , glushkov..
+
+
+## Getting Started
+pour lancer l'application taper la commande
+**java --module-path lib/ --add-modules javafx.controls,javafx.fxml -jar automate.jar**
+    vous devez avoir le dossier lib dans le meme repertoire que le fichier jar .
+    sinon si vous avez javafx deja dans votre machine vous devez juste preciser le chemin vers le dossier *lib*
+### Prerequisites 
+ - **Java 17 minimun** 
+
+
+### Installing
+**java --module-path lib/ --add-modules javafx.controls,javafx.fxml -jar automate.jar**
+
+
+## Usage
+Le projet a ete developper en utilisant maven et une architecture MVC(modele-vue-controller)
+- l'interface graphique a ete implementer en **fxml**
